fix: fall back for uncertain access and module semantics